fix(views): Cropped text on `ComboBox`es.

--- a/src/main/resources/com/gersonfaneto/yams/stylesheets/global.css
+++ b/src/main/resources/com/gersonfaneto/yams/stylesheets/global.css
@@ -37,9 +37,9 @@
   -fx-border-color: #00d1cd;
 }
 
-.role-selector, .amount-selector,
-.type-selector {
+.combo-box {
   -fx-background-color: #dee2e6;
+  -fx-padding: -5 5 -5 5;
 }
 
 .register-label:hover {
